--- a/src/styles/DriverMain.css
+++ b/src/styles/DriverMain.css
@@ -1,26 +1,39 @@
 #driver-main {
-  height: 25vh;
+  height: 378px;
   width: 672px;
   background-color: var(--dark-grey);
   text-align: center;
-  padding-top: 2%;
-  padding-left: 5%;
   font-family: "Nunito", sans-serif;
   display: grid;
-  grid-template-columns: 200px 250px 240px;
+  grid-template-columns: 200px 260px 240px;
   grid-template-rows: 0 0;
-  position: fixed;
+  position: relative;
+}
+
+.camera-driver-main { 
+  height: 110px; 
+  width: 669px;
+  position: absolute; 
+  bottom: 0;
+  background-color: transparent;
+  border: 1px solid var(--white);
+}
+
+.camera-driver-main > p {
+  font-size: 50px;
+  margin-top: 20px;
+  color: var(--white);
 }
 
 /* LEFT SIDE OF SCREEN */
 .delta-front {
-  margin-top: 5px;
-  margin-left: 30px;
+  margin-top: 0px;
+  margin-left: 40px;
 }
 
 .delta-back {
-  margin-top: 5px;
-  margin-left: 30px;
+  margin-top: 8px;
+  margin-left: 40px;
 }
 
 .delta-grid {
@@ -33,20 +46,21 @@
 }
 
 .delta-grid-item {
-  font-size: 18px;
+  font-size: 25px;
   color: var(--light-grey);
 }
 
 .delta-grid-item > p {
   margin-top: 15px;
+  margin-left: 5px;
 }
 
 /* STYLE FOR DELTA TRIANGLE */
 .triangle {
   position: relative;
   transform: scale(var(--ggs,1));
-  width: 28px;
-  height: 36px;
+  width: 32px;
+  height: 40px;
   border-left: 3px solid transparent;
   border-bottom: 3px solid var(--light-grey);
 }
@@ -59,14 +73,14 @@
 .triangle::before {
   content: "";
   position: absolute;
-  width: 26px;
-  height: 26px;
+  width: 30px;
+  height: 29px;
   border-left: 3px solid var(--light-grey);
   border-top: 3px solid var(--light-grey);
   border-bottom: 3px solid transparent;
   transform: rotate(45deg) skew(10deg,10deg);
   left: -2px;
-  bottom: -16px
+  bottom: -17px;
 }
 
 .delta-back > .delta-grid > .delta-grid-item > .triangle::before {
@@ -75,53 +89,54 @@
 /* END OF STYLE FOR DELTA TRIANGLE */
 
 .battery {
-  width: 100px;
+  width: 120px;
   background: linear-gradient(to right, var(--dark-blue), var(--light-aqua));
-  height: 50px;
+  height: 60px;
   border-radius: 10px;
-  margin-top: -30px;
+  margin-top: -45px;
   margin-bottom: 20px;
   padding: 3px;
-  margin-left: 20px;
+  margin-left: 30px;
 }
 
 .battery-inner {
   background-color: var(--dark-grey);
   margin-bottom: -10px;
   padding: 0;
-  height: 50px;
-  width: 100px;
+  height: 60px;
+  width: 120px;
   border-radius: 10px;
-  position: fixed;
+  position: absolute;
   margin: auto;
 }
 
 .battery-inner > p {
   color: var(--white);
-  font-size: 30px;
-  margin-top: 5px;
+  font-size: 35px;
+  margin-top: 7px;
 }
 
 .battery-cap {
-  width: 100px;
+  width: 120px;
   background: linear-gradient(to right, var(--dark-blue), var(--light-aqua));
   height: 10px;
   padding: 5px;
-  margin-top: 15px;
+  margin-top: 20px;
   margin-left: 5px;
 }
 
 .lap-sector {
   display: grid;
-  grid-template-columns: 60px 60px;
+  grid-template-columns: 80px 80px;
   grid-template-rows: 0 0;
   text-align: center;
-  grid-gap: 35px;
-  margin-bottom: 30px;
+  grid-gap: 25px;
+  margin-bottom: 35px;
+  margin-left: 10px;
 }
 
 .lap-sector-item {
-  font-size: 15px;
+  font-size: 20px;
   color: var(--white);
   text-align: left;
 }
@@ -142,6 +157,7 @@
   border-radius: 50%;
   border: 2px solid var(--dark-blue);
   margin-top: 30px;
+  margin-left: 20px;
 }
 
 .speed-gradient {
@@ -149,7 +165,7 @@
   width: 170px;
   border-radius: 50%;
   margin: 15px auto auto 15px;
-  position: fixed;
+  position: absolute;
   background: linear-gradient(to top, var(--dark-blue), var(--light-aqua));
 }
 
@@ -159,7 +175,7 @@
   border-radius: 50%;
   background: var(--dark-grey);
   margin: 10px auto auto 10px;
-  position: fixed;
+  position: absolute;
 }
 
 .speed-inner > p:first-child {
@@ -193,8 +209,8 @@
 }
 
 .wheel-main {
-  width: 50px;
-  height: 100px;
+  width: 60px;
+  height: 90px;
   border: 4px solid var(--dark-blue);
   border-radius: 10px;
   color: var(--white);
@@ -206,35 +222,34 @@
 }
 
 .wheel-main > p:nth-child(2) {
-  margin-top: 30px;
+  margin-top: 25px;
 }
 
 .wheel-connector-main-left-warning {
   height: 40px;
   width: 20px;
-  margin: -90px auto auto 53px;
+  margin: -87px auto auto 64px;
   background: linear-gradient(to right, var(--dark-red), var(--light-red));;
 }
 
 .wheel-connector-main-left-normal {
   height: 40px;
   width: 20px;
-  margin: -90px auto auto 53px;
+  margin: -87px auto auto 64px;
   background: linear-gradient(to right, var(--darker-yellow), var(--yellow));;
 }
 
 .wheel-connector-main-right-warning {
   height: 40px;
   width: 20px;
-  margin: -90px auto auto -24px;
+  margin: -87px auto auto -24px;
   background: linear-gradient(to right, var(--dark-red), var(--light-red));;
 }
 
 .wheel-connector-main-right-normal {
   height: 40px;
   width: 20px;
-  margin: -90px auto auto -24px;
+  margin: -87px auto auto -24px;
   background: linear-gradient(to right, var(--darker-yellow), var(--yellow));;
 }
-
 /* END OF RIGHT SCREEN */
