--- a/src/styles/Controls.css
+++ b/src/styles/Controls.css
@@ -1,11 +1,11 @@
 #controls {
-  height: 500px;
+  height: 1200px;
   width: 400px;
   background-color: var(--dark-grey);
   text-align: center;
   font-family: "Nunito", sans-serif;
   position: absolute;
-  margin: 10px 0 0 700px;
+  margin: 0 0 0 700px;
 }
 
 #controls > form {
