--- a/src/styles/DriverSecondary.css
+++ b/src/styles/DriverSecondary.css
@@ -1,7 +1,8 @@
 #driver-secondary {
-  margin-top: 10px;
-  height: 378px;
-  width: 672px;
+  padding-left: 200px;
+  padding-top: 20px;
+  height: 450px;
+  width: 1100px;
   background-color: var(--dark-grey);
   text-align: center;
   font-family: "Nunito", sans-serif;
