--- a/src/styles/RaceDriverMain.css
+++ b/src/styles/RaceDriverMain.css
@@ -1,7 +1,7 @@
 #driver-main-race {
-  margin-top: 10px;
-  height: 378px;
-  width: 672px;
+  padding-left: 200px;
+  height: 450px;
+  width: 1100px;
   background-color: var(--dark-purple);
   text-align: center;
   font-family: "Darker Grotesque", sans-serif;
@@ -9,8 +9,9 @@
 }
 
 .camera-driver-race { 
-  height: 130px; 
+  height: 150px; 
   width: 669px;
+  margin-left: 200px;
   position: absolute; 
   bottom: 0;
   background-color: transparent;
@@ -429,8 +430,7 @@
   position: absolute;
   margin-top: 10px;
   width: 35px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-right: 435px;
   height: 90px;
   border: 3px solid var(--white);
   border-radius: 15px;
@@ -444,7 +444,7 @@
   margin-top: 35px;
   position: absolute;
   right: 0px;
-  margin-right: 55px;
+  margin-right: 480px;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
 }
@@ -477,8 +477,7 @@
   position: absolute;
   margin-top: 120px;
   width: 35px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin-right: 435px;
   height: 90px;
   border: 3px solid var(--dark-orange);
   border-radius: 15px;
@@ -492,7 +491,7 @@
   margin-top: 145px;
   position: absolute;
   right: 0px;
-  margin-right: 55px;
+  margin-right: 480px;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
 }
