--- a/src/styles/Camera.css
+++ b/src/styles/Camera.css
@@ -1,18 +1,4 @@
-#left-camera {
-  height: 450px;
-  width: 1100px;
-  padding-left: 180px;
-  background-color: var(--dark-grey);
-  text-align: center;
-  font-family: "Nunito", sans-serif;
-  display: grid;
-  grid-template-columns: 200px 260px 240px;
-  grid-template-rows: 0 0;
-  position: relative;
-  color: var(--white);
-}
-
-#right-camera {
+#front-camera {
   height: 450px;
   width: 1100px;
   padding-left: 180px;
