--- a/src/styles/RaceDriverMain.css
+++ b/src/styles/RaceDriverMain.css
@@ -2,10 +2,11 @@
   padding-left: 180px;
   height: 450px;
   width: 1100px;
-  background-color: var(--dark-purple);
   text-align: center;
   font-family: "Darker Grotesque", sans-serif;
+  padding-top: 70px;
   position: relative;
+  z-index: 1;
 }
 
 .camera-driver-race { 
@@ -153,7 +154,7 @@
 }
 
 .center-bar-value > p {
-  color: var(--dark-purple);
+  color: var(--dark-grey);
   position: absolute;
 }
 
@@ -170,13 +171,13 @@
   height: 50px;
   border-radius: 10px;
   background-color: var(--dark-orange);
-  border: 3px solid var(--dark-purple);
+  border: 3px solid var(--dark-grey);
   position: absolute;
   margin: -20px 0 0 180px;
 }
 
 .center-piece > p {
-  color: var(--dark-purple);
+  color: var(--dark-grey);
 }
 
 .center-piece-cap {
@@ -184,7 +185,7 @@
   height: 60px;
   border-radius: 5px;
   background-color: var(--dark-orange);
-  border: 3px solid var(--dark-purple);
+  border: 3px solid var(--dark-grey);
   position: absolute;
   margin: -30px 0 0 192px;
 }
@@ -207,7 +208,7 @@
 }
 
 .water-value > p {
-  color: var(--dark-purple);
+  color: var(--dark-grey);
   font-size: 8px;
   margin-left: 45px;
 }
@@ -518,8 +519,8 @@
   font-size: 15px;
   position: inherit;
   color: var(--white);
-  border: 2px solid var(--dark-purple);
-  background-color: var(--dark-purple);
+  border: 2px solid var(--dark-grey);
+  background-color: var(--dark-grey);
 }
 
 .horizontal-line-text-one {
